Made the navbar component and did some CSS work on it.

--- a/src/App.css
+++ b/src/App.css
@@ -51,7 +51,7 @@ body {
   margin-bottom: 0;
 }
 
-.nav-masthead .nav-link {
+.nav-masthead .Nav.Link {
   padding: 0.25rem 0;
   font-weight: 700;
   color: rgba(255, 255, 255, 0.5);
@@ -59,12 +59,12 @@ body {
   border-bottom: 0.25rem solid transparent;
 }
 
-.nav-masthead .nav-link:hover,
-.nav-masthead .nav-link:focus {
+.nav-masthead .Nav.Link:hover,
+.nav-masthead .Nav.Link:focus {
   border-bottom-color: rgba(255, 255, 255, 0.25);
 }
 
-.nav-masthead .nav-link + .nav-link {
+.nav-masthead .Nav.Link + .Nav.Link {
   margin-left: 1rem;
 }
 
