Feature component done expect changing the border, for some reasons it is not letting me do it at this time

--- a/src/App.css
+++ b/src/App.css
@@ -170,3 +170,56 @@ body {
   border-color: #fff;
   line-height: 1.8;
 }
+
+
+/* .slider {
+  position: relative;
+ 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+*/
+
+.cardItem {
+  width: 350px;
+  height: 415px;
+  border: .05rem solid #fff;
+}
+
+.btn-primary,
+  .btn-primary:hover {
+    background-color: #333;
+    border-color: #fff;
+    line-height: 1.8;
+    flex: 1; 
+  }
+
+
+/* .btn-primary {
+  z-index: 10px;
+  cursor: pointer;
+  user-select: none;
+} */
+
+.titleDesc {
+  color: black;
+  background-color: white;
+  width: 110%;
+  border-color: #fff; 
+}
+.react-multi-carousel-item{
+    max-width: 230px;
+    min-width:230px;
+}
+/* .carousel-container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+} */
+.image {
+  
+  border-color: #fff;
+}
+
+
