--- a/src/App.css
+++ b/src/App.css
@@ -212,14 +212,15 @@ body {
     max-width: 230px;
     min-width:230px;
 }
-/* .carousel-container {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-} */
+
 .image {
   
   border-color: #fff;
+}
+
+.intro-bg {
+  background-image: linear-gradient(90deg, #e3ffe7 0%, #d9e7ff 100%);
+   
 }
 
 
