--- a/src/App.css
+++ b/src/App.css
@@ -109,39 +109,7 @@ body {
   padding: 20px 0;
 }
 
-/*
-* Meet Us Styling
-*/
-.intro-bg {
-  position: center;
-  background-image: linear-gradient(90deg, #e3ffe7 0%, #d9e7ff 100%);
-  height: 100%;
-  transform: skewY(-5deg);
-}
 
-.intro-bg:hover {
-  transform: skewY(0deg);
-  transform: scale(1.15);
-  transform: translateY(-25px);
-}
-
-.intro-bg-normal {
-  height: 100%;
-  width: 100%;
-  transform: translateY(-40px);
-}
-
-.content {
-  max-width: 50em;
-  margin: 0 auto;
-  color: black;
-  text-shadow: #333;
-}
-
-.carouselCard h4,
-.carouselCard p {
-  color: black;
-}
 
 .fab {
   color: white;
@@ -205,22 +173,44 @@ body {
 .titleDesc {
   color: black;
   background-color: white;
-  width: 110%;
+  width: 100%;
   border-color: #fff; 
 }
-.react-multi-carousel-item{
-    max-width: 230px;
-    min-width:230px;
-}
+
 
 .image {
-  
   border-color: #fff;
 }
 
+/*
+* Meet Us Styling
+*/
 .intro-bg {
   background-image: linear-gradient(90deg, #e3ffe7 0%, #d9e7ff 100%);
-   
+  transform: skewY(-5deg);
 }
 
+.intro-bg:hover {
+  transform: skewY(0deg);
+  transform: scale(1.15);
+  transform: translateY(-25px);
+}
+
+.intro-bg-normal {
+  height: 100%;
+  width: 100%;
+  /* transform: translateY(-40px); */
+}
+
+.content {
+  max-width: 50em;
+  margin: 0 auto;
+  color: black;
+  text-shadow: #333;
+}
+
+.carouselCard h4,
+.carouselCard p {
+  color: black;
+}
 
